--- a/stemplet bloger/mode-book.css
+++ b/stemplet bloger/mode-book.css
@@ -22,12 +22,12 @@ a {
     padding: 10px 0 10px 0;
 
 }
-.mb-menu ul {
+ul {
     list-style-type: none;
     padding: 0 10px 0 5px;
   }
   
-  .mb-menu  ul li {
+   ul li {
     padding: 8px 16px;
     margin: 5px 0 5px 0;
     border-top: 1px solid #5c4242;
@@ -38,6 +38,20 @@ a {
     background-size:100% 100%;
     background-repeat: no-repeat;
     text-align: center;
+  }
+  .navig{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 20px;
+    height: 50px;
+    background-color: rgb(175, 127, 127);
+  }
+  .navig ul{
+    padding-top: 7px;
+  }
+  .navig ul li{
+    float: right;
+    margin: 0 5px 0 5px;
   }
   
 .hidden{
