--- a/stemplet bloger/asli/main.css
+++ b/stemplet bloger/asli/main.css
@@ -4,8 +4,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-  @import url('https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap');
-
 
 
 .section-navbar{
@@ -13,20 +11,128 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    width: 100%;
     z-index: 200;
+    background-color: #c7b299;
+    color: #323545;
+    padding: 5px;
+    letter-spacing: 2px;
+}
+.section-navbar svg{
+    cursor: pointer;
 }
 .menu-page ul{
     list-style: none;
     display: flex;
 }
 .menu-page ul li{
-    margin-left: 5px;
+    padding: 0px 5px;
+    border-left: 1px solid #323545;
+}
+.menu-page ul li:first-child{
+    border-left: none;
 }
 .cari{
     position: absolute;
-    top: 40px;
+    top: 0;
+    transition: top 1s;
     left: 0;
     right: 0;
     display: flex;
     justify-content: center;
 }
+.tampil-cari{
+    top: 45px;
+    transition: top 1s;
+}
+/* akhir navbar */
+
+.section-hero{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 50px;
+    background-image: linear-gradient(to bottom, #c7b299 20%,whitesmoke);
+}
+.text-slog{
+    max-width: 50%;
+    padding: 20px;
+}
+.text-slog h1{
+text-align: right;
+font-family:'Amiri Quran',serif;
+color: #323545;
+}
+.text-slog p{
+    font-family:'Bad Script', cursive;
+    text-align: center;
+    color: #68656b;
+}
+.section-hero .gambar img{
+width: 300px;
+}
+/* akhir hero */
+.section-content{
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    background-image: linear-gradient(to bottom,whitesmoke, #c7b299);
+}
+.area-kategori{
+    width: 150px;
+}
+.area-label, .area-arsip{
+    width: 100%;
+    margin: 5px;
+    font-family: 'Teko', sans-serif;
+    font-size: 14pt;
+    border-radius: 15px;
+    position: sticky;
+}
+* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #68656b;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c7b299; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #323545; 
+}
+.area-label{
+    top: 45px;
+}
+.area-arsip{
+    top: 300px;
+    
+}
+.item-label ul, .item-arsip ul{
+   padding: 5px;
+   list-style: none;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   height: 200px;
+    overflow:auto;
+}
+.item-label ul li, .item-arsip ul li{
+background-color: #c7b299;
+margin: 2px 0px;
+padding: 0px 10px;
+border: 1px solid whitesmoke;
+border-radius: 5px;
+}
+.section-post{
+    padding: 20px;
+}
+/* akhir area-kategori */
